[gd_scene load_steps=11 format=3 uid="uid://dbed8o5tia3mp"]

[ext_resource type="Script" uid="uid://dp0gbrxhuaw10" path="res://assets/scripts/menu/main_menu.gd" id="1_jk1qb"]
[ext_resource type="Texture2D" uid="uid://jahyski1ymso" path="res://assets/sprites/menu/background/cork board.png" id="2_5dd4i"]
[ext_resource type="FontFile" uid="uid://dxl20ep87cn2d" path="res://assets/fonts/Adumu.ttf" id="3_lgwnu"]
[ext_resource type="Texture2D" uid="uid://bvsk10bq022qf" path="res://assets/sprites/menu/title/Title.png" id="4_flqon"]
[ext_resource type="Texture2D" uid="uid://cxxax3vi5cg63" path="res://assets/sprites/menu/notes/board note 1.png" id="5_rcqid"]
[ext_resource type="Texture2D" uid="uid://c0ax2mck7vbff" path="res://assets/sprites/menu/notes/board note 5.png" id="6_1ajci"]
[ext_resource type="Texture2D" uid="uid://c4u2c0s6rsgwg" path="res://assets/sprites/menu/notes/board note 3.png" id="7_7b55j"]
[ext_resource type="Texture2D" uid="uid://c7tf40w1gtlvn" path="res://assets/sprites/menu/notes/board note 2.png" id="8_5pajh"]
[ext_resource type="LabelSettings" uid="uid://sorudr2pewmw" path="res://assets/fonts/menu_button.tres" id="8_r3xx2"]
[ext_resource type="Texture2D" uid="uid://21o4rhtgukyh" path="res://assets/sprites/menu/notes/board note 4.png" id="9_j7ex8"]

[node name="MainMenu" type="Control" node_paths=PackedStringArray("exeption_message", "exeption_message_timer") groups=["Main_Menu", "Menu"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jk1qb")
exeption_message = NodePath("MainMenu/MainMenuContainer/Exeption Message")
exeption_message_timer = NodePath("MainMenu/MainMenuContainer/Exeption Message/Timer")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_5dd4i")
expand_mode = 3

[node name="MainMenu" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 70
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 40

[node name="MainMenuContainer" type="VBoxContainer" parent="MainMenu"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Logo" type="TextureRect" parent="MainMenu/MainMenuContainer"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("4_flqon")
expand_mode = 1
stretch_mode = 5

[node name="Exeption Message" type="Label" parent="MainMenu/MainMenuContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 10
theme_override_constants/shadow_outline_size = 10
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="MainMenu/MainMenuContainer/Exeption Message"]
wait_time = 3.0
one_shot = true

[node name="ButtonsSection" type="HBoxContainer" parent="MainMenu/MainMenuContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 50
alignment = 1

[node name="Host" type="TextureButton" parent="MainMenu/MainMenuContainer/ButtonsSection"]
layout_mode = 2
texture_normal = ExtResource("5_rcqid")
texture_pressed = ExtResource("6_1ajci")
texture_hover = ExtResource("7_7b55j")

[node name="Title" type="Label" parent="MainMenu/MainMenuContainer/ButtonsSection/Host"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"HeaderLarge"
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_lgwnu")
text = "HOST"
label_settings = ExtResource("8_r3xx2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Join" type="TextureButton" parent="MainMenu/MainMenuContainer/ButtonsSection"]
layout_mode = 2
texture_normal = ExtResource("5_rcqid")
texture_pressed = ExtResource("6_1ajci")
texture_hover = ExtResource("7_7b55j")

[node name="Title" type="Label" parent="MainMenu/MainMenuContainer/ButtonsSection/Join"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"HeaderLarge"
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_lgwnu")
text = "JOIN"
label_settings = ExtResource("8_r3xx2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Settings" type="TextureButton" parent="MainMenu/MainMenuContainer/ButtonsSection"]
layout_mode = 2
texture_normal = ExtResource("9_j7ex8")
texture_pressed = ExtResource("6_1ajci")
texture_hover = ExtResource("7_7b55j")

[node name="Title" type="Label" parent="MainMenu/MainMenuContainer/ButtonsSection/Settings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"HeaderLarge"
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_lgwnu")
text = "SETTINGS"
label_settings = ExtResource("8_r3xx2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SETTINGS" type="Label" parent="MainMenu/MainMenuContainer/ButtonsSection/Settings"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"HeaderLarge"
theme_override_fonts/font = ExtResource("3_lgwnu")
theme_override_font_sizes/font_size = 35
text = "âš™"
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuitGame" type="TextureButton" parent="MainMenu/MainMenuContainer/ButtonsSection"]
layout_mode = 2
texture_normal = ExtResource("8_5pajh")
texture_pressed = ExtResource("6_1ajci")
texture_hover = ExtResource("7_7b55j")

[node name="Title" type="Label" parent="MainMenu/MainMenuContainer/ButtonsSection/QuitGame"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"HeaderLarge"
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_lgwnu")
text = "QUIT
GAME"
label_settings = ExtResource("8_r3xx2")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="timeout" from="MainMenu/MainMenuContainer/Exeption Message/Timer" to="." method="_on_timer_timeout"]
[connection signal="button_up" from="MainMenu/MainMenuContainer/ButtonsSection/Host" to="." method="_on_host_button_up"]
[connection signal="mouse_entered" from="MainMenu/MainMenuContainer/ButtonsSection/Host" to="." method="_on_button_hover"]
[connection signal="button_up" from="MainMenu/MainMenuContainer/ButtonsSection/Join" to="." method="_on_join_button_up"]
[connection signal="mouse_entered" from="MainMenu/MainMenuContainer/ButtonsSection/Join" to="." method="_on_button_hover"]
[connection signal="button_up" from="MainMenu/MainMenuContainer/ButtonsSection/Settings" to="." method="_on_settings_button_up"]
[connection signal="mouse_entered" from="MainMenu/MainMenuContainer/ButtonsSection/Settings" to="." method="_on_button_hover"]
[connection signal="button_up" from="MainMenu/MainMenuContainer/ButtonsSection/QuitGame" to="." method="_on_quit_game_button_up"]
[connection signal="mouse_entered" from="MainMenu/MainMenuContainer/ButtonsSection/QuitGame" to="." method="_on_button_hover"]
